--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Test</h1>
+<style>
+.grid {
+  display: grid;
+  grid-column-gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+</style>
+<div class="grid">
+  <div class="item">Item</div>
+  <div class="item">Item</div>
+  <div class="item">Item</div>
+  <div class="item">Item</div>
+  <div class="item">Item</div>
+  <div class="item">Item</div>
+</div>
