--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   grid-column-gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
+.item {
+  padding: 1em;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
 </style>
 <div class="grid">
   <div class="item">Item</div>
