--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <style>
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 .grid {
   display: grid;
   grid-column-gap: 15px;
