--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ body {
 }
 </style>
 <div class="grid">
-  <div class="item">Item</div>
-  <div class="item">Item</div>
-  <div class="item">Item</div>
-  <div class="item">Item</div>
-  <div class="item">Item</div>
-  <div class="item">Item</div>
+  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Item</h3></div>
 </div>
