--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+}
 .grid {
   display: grid;
   grid-column-gap: 15px;
