--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <style>
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  background: black;
+  color: white;
 }
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
@@ -15,9 +17,29 @@ h1,h2,h3,h4,h5,h6 {
   border: 1px solid grey;
   border-radius: 5px;
 }
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.dlbtn {
+  background-color: #FF32E0;
+  border-radius: 5px;
+  font-size: 1em;
+  padding: 0.5em;
+  color: white;
+  text-decoration: none;
+}
 </style>
+<div class="clearfix about" style="border: 1px solid grey; border-radius: 5px;">
+	<img style="float: left; margin-right: 1em;" src="https://img.itch.zone/aW1hZ2UvMTYzNjk1Ny85NjM1NzM3LnBuZw==/original/58n%2BwT.png" height="256"></img></td>
+	<div style="margin-left: 1em;"><h1>CelLua X</h1><div>By <b>Tech Stuff</b></div><p>CelLua X is a mod of CelLua, with a mod loader, an android port, and a few qol tweeks.</p><div>Downloads: <a style="background-color: #0078D7; border-radius: 5px; font-size: 1em; padding: 0.5em; color: white; text-decoration: none;" href="https://github.com/teknixstuff/CelLua-X/releases/download/0.0.1/CelLua.X.Win64.zip">Windows 64-bit</a> <a style="background-color: #3EDC85; border-radius: 5px; font-size: 1em; padding: 0.5em; color: white; text-decoration: none;" href="https://github.com/teknixstuff/CelLua-X/releases/download/0.0.1/CelLua.X.with.modloader.apk">Android</a></div></div>
+</div>
+<br>
+<h1 style="text-align: center;">Mod Store</h1>
+<br>
 <div class="grid">
-  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Diamond Coin</h3><p>Adds a diamond coin which counts as 5 coins.</p><a class="dlbtn" href="https://github.com/teknixstuff/CelLua-X/releases/download/0.0.1/CelLua.X.Win64.zip">Download</a></div>
   <div class="item"><h3>Item</h3></div>
   <div class="item"><h3>Item</h3></div>
   <div class="item"><h3>Item</h3></div>
