--- a/index.html
+++ b/index.html
@@ -55,10 +55,5 @@ h1,h2,h3,h4,h5,h6 {
 <h1 style="text-align: center;">Mod Store</h1>
 <br>
 <div class="grid">
-  <div class="item"><h3>Diamond Coin</h3><p>Adds a diamond coin which counts as 5 coins.</p><a class="dlbtn" href="https://github.com/teknixstuff/CelLua-X/releases/download/0.0.1/CelLua.X.Win64.zip">Download</a></div>
-  <div class="item"><h3>Item</h3></div>
-  <div class="item"><h3>Item</h3></div>
-  <div class="item"><h3>Item</h3></div>
-  <div class="item"><h3>Item</h3></div>
-  <div class="item"><h3>Item</h3></div>
+  <div class="item"><h3>Diamond Coin</h3><p>Adds a diamond coin which counts as 5 coins.</p><a class="dlbtn" href="https://github.com/teknixstuff/CelLua-X-Mod-Store/releases/download/diamondcoin/diamond.coin.zip">Download</a></div>
 </div>
