--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h1,h2,h3,h4,h5,h6 {
 </style>
 <div class="clearfix about" style="border: 1px solid grey; border-radius: 5px;">
 	<img style="float: left; margin-right: 1em;" src="https://img.itch.zone/aW1hZ2UvMTYzNjk1Ny85NjM1NzM3LnBuZw==/original/58n%2BwT.png" height="256"></img></td>
-	<div style="margin-left: 1em;"><h1>CelLua X</h1><div>By <b>Tech Stuff</b></div><p>CelLua X is a mod of CelLua, with a mod loader, an android port, and a few qol tweeks.</p><div>Downloads: <a class="dlbtn" id="Win64DL" href="https://github.com/teknixstuff/CelLua-X/releases/download/0.0.1/CelLua.X.Win64.zip">Windows 64-bit</a> <a class="dlbtn" id="AndroidDL" href="https://github.com/teknixstuff/CelLua-X/releases/download/0.0.1/CelLua.X.with.modloader.apk">Android</a></div></div>
+	<div style="margin-left: 1em;"><h1>CelLua X</h1><div>By <b>Tech Stuff</b></div><p>CelLua X is a mod of CelLua, with a mod loader, an android port, and a few qol tweeks.</p><div>Downloads: <a class="dlbtn" id="Win64DL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.Win64.zip">Windows 64-bit</a> <a class="dlbtn" id="AndroidDL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.with.modloader.apk">Android</a></div></div>
 </div>
 <br>
 <h1 style="text-align: center;">Mod Store</h1>
