--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 120px;
+  width: auto;
   background-color: black;
   color: #fff;
   text-align: center;
