--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ a {
   transition: opacity 1s;
 }
 
+.tooltip .tooltiptext a {
+  color: white;
+}
+
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
