--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@ a {
 #Win64DL:hover {
   background-color: #00adef;
 }
+#LoveDL {
+  background-color: #E84A99;
+}
+#LoveDL:hover {
+  background-color: #F85AA9;
+}
+
+#DiscordBtn {
+  background-color: #7289da;
+}
+#DiscordBtn:hover {
+  background-color: #b8c3ec;
+}
 
 .tooltip {
   position: relative;
@@ -85,8 +98,8 @@ a {
 }
 </style>
 <div class="clearfix about" style="border: 1px solid grey; border-radius: 5px;">
-	<img style="float: left; margin-right: 1em;" src="https://img.itch.zone/aW1hZ2UvMTYzNjk1Ny85NjM1NzM3LnBuZw==/original/58n%2BwT.png" height="256"></img></td>
-	<div style="margin-left: 1em;">
+  <img style="float: left; margin-right: 1em;" src="https://img.itch.zone/aW1hZ2UvMTYzNjk1Ny85NjM1NzM3LnBuZw==/original/58n%2BwT.png" height="256"></img></td>
+  <div style="margin-left: 1em;">
     <h1>CelLua X</h1>
     <div>By <b>Tech Stuff</b></div>
     <p>CelLua X is a mod of CelLua, with a mod loader, an android port, and a few qol tweeks.</p>
@@ -95,7 +108,10 @@ a {
     <div>Downloads:
       <a class="dlbtn" id="Win64DL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.Win64.zip">Windows 64-bit</a>
       <a class="dlbtn" id="AndroidDL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.with.modloader.apk">Android</a>
+      <a class="dlbtn" id="LoveDL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.love">Love</a>
     </div>
+    <br>
+    <a class="dlbtn" id="DiscordBtn" href="https://discord.gg/NCRgkN8qPf">CelLua X Discord</a>
   </div>
 </div>
 <br>
