--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ a {
 }
 </style>
 <div class="clearfix about" style="border: 1px solid grey; border-radius: 5px;">
-  <img style="float: left; margin-right: 1em;" src="https://img.itch.zone/aW1hZ2UvMTYzNjk1Ny85NjM1NzM3LnBuZw==/original/58n%2BwT.png" style="min-height: 250px;height: 100%;"></img></td>
+  <img style="float: left; margin-right: 1em;" src="https://img.itch.zone/aW1hZ2UvMTYzNjk1Ny85NjM1NzM3LnBuZw==/original/58n%2BwT.png" height="300"></img></td>
   <div style="margin-left: 1em;">
     <h1>CelLua X</h1>
     <div>By <b>Tech Stuff</b></div>
