--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ a {
       <a class="dlbtn" id="Win64DL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.Win64.zip">Windows 64-bit</a>
       <a class="dlbtn" id="AndroidDL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.with.modloader.apk">Android</a>
       <a class="dlbtn" id="LoveDL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.love">Love</a>
-      <a class="dlbtn" id="PlayOnline" href="/HTML5/">Love</a>
+      <a class="dlbtn" id="PlayOnline" href="/HTML5/">Online</a>
     </div>
     <br>
     <a class="dlbtn" id="DiscordBtn" href="https://discord.gg/NCRgkN8qPf">CelLua X Discord</a>
