--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ a {
     <div>By <b>Tech Stuff</b></div>
     <p>CelLua X is a mod of CelLua, with a mod loader, an android port, and a few qol tweeks.</p>
     <p>Lead Dev: <span class="tooltip">Tech Stuff<span class="tooltiptext">Discord: Tech Stuff#2849<br><a href="https://discord.gg/e5U6wQfSn6">Discord Server</a><br><a href="https://www.youtube.com/channel/UCdbjUe7fU7PGp1HOwqZ6EZQ">Youtube Channel</a></span></span></p>
-    <p>Testers: <span class="tooltip">Nolan0027<span class="tooltiptext">Discord: Nolan0027#5567</span></span></p>
+    <p>Testers: <del><span class="tooltip">Nolan0027<span class="tooltiptext">Discord: Nolan0027#5567<br><b>NOLAN TRIED TO STEAL THE GAME!</b></span></span></del></p>
     <div>Downloads:
       <a class="dlbtn" id="Win64DL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.Win64.zip">Windows 64-bit</a>
       <a class="dlbtn" id="AndroidDL" href="https://github.com/teknixstuff/CelLua-X/releases/latest/download/CelLua.X.with.modloader.apk">Android</a>
@@ -128,7 +128,7 @@ a {
   <div class="item">
     <h3>Diamond Coin</h3>
     <p>Adds a diamond coin which counts as 5 coins.</p>
-    <p>Thanks to <span class="tooltip">Nolan0027<span class="tooltiptext">Discord: Nolan0027#5567</span></span> for coming up with the idea!</p>
+    <p>Thanks to <span class="tooltip">Nolan0027<span class="tooltiptext">Discord: Nolan0027#5567</span></span> for <del>coming up with the idea!</del><b>STEALING MY GAME!</b></p>
     <a class="dlbtn" href="https://github.com/teknixstuff/CelLua-X-Mod-Store/releases/download/diamondcoin/diamond.coin.zip">Download</a>
   </div>
 </div>
