--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ a {
   <div class="item">
     <h3>Diamond Coin</h3>
     <p>Adds a diamond coin which counts as 5 coins.</p>
-    <p>Thanks to <span class="tooltip">Nolan0027<span class="tooltiptext">Discord: Nolan0027#5567</span></span> for <del>coming up with the idea!</del><b>STEALING MY GAME!</b></p>
+    <p>Thanks to <span class="tooltip">Nolan0027<span class="tooltiptext">Discord: Nolan0027#5567</span></span> for <del>coming up with the idea</del> <b>STEALING MY GAME!</b></p>
     <a class="dlbtn" href="https://github.com/teknixstuff/CelLua-X-Mod-Store/releases/download/diamondcoin/diamond.coin.zip">Download</a>
   </div>
 </div>
