--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ a {
       <a class="dlbtn" id="PlayOnline" href="HTML5/">Online</a>
     </div>
     <br>
-    <a class="dlbtn" id="DiscordBtn" href="https://discord.gg/NCRgkN8qPf">CelLua X Discord</a>
+    <a class="dlbtn" id="DiscordBtn" href="https://discord.gg/33Mh7DKZR2">CelLua X Discord</a>
   </div>
 </div>
 <br>
